--- a/main.ipynb
+++ b/main.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-01-08T11:08:57.123352Z",
@@ -33,20 +33,11 @@
     },
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "加载完成！\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from poet import Poet\n",
-    "from config import epoch as param\n",
     "\n",
-    "AI = Poet(param)\n",
+    "AI = Poet()\n",
     "print(\"加载完成！\")\n"
    ]
   },
@@ -60,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-01-08T11:09:01.414170Z",
@@ -72,15 +63,7 @@
     "scrolled": true,
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "唧唧复唧唧，寒螀鸣不歇。寒蛩啼不定，残蝉悲故国。秋风吹客衣，秋思满庭树。何时一樽酒，相与同一醉。\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(AI.renewal(input(\"请输入要续写的诗句：\")))\n"
    ]
@@ -95,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-01-08T11:10:09.265303Z",
@@ -107,19 +90,7 @@
     "scrolled": true,
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "人生何处不相逢，一日相逢一笑中。\n",
-      "工部未能忘世俗，文章犹自在天工。\n",
-      "智愚不必论三益，忧患须知有一同。\n",
-      "能使此心无所用，尧夫非是爱吟诗。\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(AI.acrostic(input(\"请输入藏头诗的头：\")))\n"
    ]
